Nuevo SeeRecipeActivity.kt para visualizar Recetas (In Progress)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.CookBook"
         tools:targetApi="31">
         <activity
+            android:name=".ui.view.main.recipe.SeeRecipeActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.view.main.recipe.AddRecipeActivity"
             android:exported="false" />
         <activity
@@ -22,6 +25,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
