--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildFeatures {
@@ -65,4 +71,7 @@ dependencies {
 
     //Activty Libraries
     implementation "androidx.activity:activity:1.6.1"
+
+    //Coil Library
+    implementation "io.coil-kt:coil:0.8.0"
 }
