Cooking Activity progress

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.CookBook"
         tools:targetApi="33">
         <activity
+            android:name=".CookingActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.view.main.recipe.SeeRecipeActivity"
             android:exported="false" />
         <activity
